# tp-note

./: .azure-pipelines.yml  .envrc  .gitattributes  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Cargo.toml  README.md  azure-pipelines.yml  build.rs  flake.nix  result  rust-toolchain.toml  shell.nix
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
assets/: tp-note--Note.md  tpnote.svg--Note.md
build-env/: Dockerfile  docker-compose.yml  open-dev-shell  rebuild-dev-image  run-script
doc/: docbook52pdf  make--README  make--all  make--index  make--rustdoc-link  make--tp-note--manpage  make--tp-note--manual  md2docbook2html
doc/build-doc-env/: Dockerfile  docker-compose.yml  open-dev-shell  run-script
doc/source/: docutils_basic.css  docutils_basic.css--URL.md  index.md  tp-note--manpage.md  tp-note--manual.md
doc/source/docbook-xsl/: common.xsl
docs/: .envrc  docbook52html  docbook52pdf  flake.nix  make--all  make--all-docker  make--index  make--rustdoc-link  make--symlinks  make--tp-note--manpage  make--tp-note--manual  make--tpnote--manpage  make--tpnote--manual  markdown2html
docs/build-doc-env/: Dockerfile  open-dev-shell  rebuild-dev-image  run-script
docs/source/: README.md  index.md  tp-note--manpage.md  tp-note--manual.md  tpnote--manpage.md  tpnote--manual.md  winget-distribution.md
scripts/: 01-make-all  01-make-all.nu  02-make-all-docker  10-clear-all-builds  10-clear-targets  10-clear-targets.nu  11-test  11-test.nu  12-make-targets  13-make-cross-compile  13-make-docs  13-make-docs.nu  13b-make-cross-compile  13c-make-win-installer.bat  13d-symlink-win-installer  14-make-doc  14-make-rustdoc  14-make-targets  14-make-targets.nu  15-make-doc  15-make-docs  16-clean-targets-keep-binaries  16-prepare-build-dir  16-symlink-installer  17-clean-targets-keep-binaries  17-make-deb-package  17-make-dist  17-make-win-msi-package  18-make-deb-package  18-make-win-msi-package  18-make-win-msi-package.nu  18b-make-win-msi-package  19-symlink-installer  19-symlink-installer.nu  20-clear-targets-keep-binaries  21-make-dist  25-generate-winget-package  25-generate-winget-package.nu  30-clear-targets-keep-binaries.nu
src/: alert_service.rs  config.rs  config2.rs  content.rs  context.rs  error.rs  error2.rs  file_editor.rs  filename.rs  filter.rs  logger.rs  main.rs  note.rs  process_ext.rs  settings.rs  sse_server.rs  template.rs  viewer.rs  watcher.rs  workflow.rs
src/lib/: Cargo.toml  README.md
src/lib/src/: config.rs  config2.rs  content.rs  context.rs  error.rs  filename.rs  filter.rs  front_matter.rs  html.rs  lib.rs  markup_language.rs  note.rs  template.rs  workflow.rs
src/viewer/: error.rs  html.rs  init.rs  mod.rs  sse_server.rs  watcher.rs  web_browser.rs
tests/functional/: 111-xxx--yyy.md  run-tests  run-tests2  test001-synchronize-expected-output  test003-annotate+clipboard-expected-output  test004-clipboard-expected-output  test005-clipboard-expected-output  test006-clipboard-expected-output  test007-annotate-expected-output  test009-stream-content-expected-output  test011-html-expected-output  test013-add-header-expected-output  test016-html-expected-output  test017-clipboard-expected-output  test018-annotate-expected-output  test019-clipboard-expected-output  test1-synchronize-expected-output  test10-html-expected-output  test10-new-new-expected-output  test101-synchronize-expected-output  test102-new-expected-output  test103-annotate+clipboard-expected-output  test104-clipboard-expected-output  test105-clipboard-expected-output  test106-clipboard-expected-output  test107-annotate-expected-output  test108-tag-expected-output  test109-stream-content-expected-output  test11-html-expected-output  test110-new-new-expected-output  test111-html-expected-output  test112-synchronize-expected-output  test113-add-header-expected-output  test115-synchronize-expected-output  test116-html-expected-output  test117-clipboard-expected-output  test118-annotate-expected-output  test119-clipboard-expected-output  test12-add-header-expected-output  test13-add-header-expected-output  (+18 more)
tp-note/: Cargo.toml  README.md
tp-note/src/: config.rs  error.rs  file_editor.rs  lib.rs  logger.rs  main.rs  settings.rs  template.rs  workflow.rs
tp-note/src/viewer/: http_response.rs  init.rs  sse_server.rs  watcher.rs  web_browser.rs
tpnote/: Cargo.toml  build.rs
tpnote-html2md/: COPYING.md  Cargo.toml  LICENSE-MIT  README.md
tpnote-html2md/src/: anchors.rs  codes.rs  common.rs  containers.rs  dummy.rs  headers.rs  iframes.rs  images.rs  lib.rs  lists.rs  markup5ever_rcdom.rs  paragraphs.rs  quotes.rs  styles.rs  tables.rs
tpnote-html2md/tests/: iframes.rs  images.rs  integration.rs  lists.rs  quotes.rs  styles.rs  tables.rs  unit.rs
tpnote-lib/: Cargo.toml
tpnote-lib/src/: clone_ext.rs  config.rs  config_default.toml  config_value.rs  content.rs  context.rs  error.rs  filename.rs  filter.rs  front_matter.rs  highlight.rs  html.rs  html2md.rs  html_renderer.rs  lib.rs  lingua.rs  markup_language.rs  note.rs  settings.rs  template.rs  text_reader.rs  workflow.rs
tpnote/src/: alert_service.rs  clipboard.rs  config.rs  config_default.toml  error.rs  file_editor.rs  logger.rs  main.rs  process_ext.rs  settings.rs  template.rs  workflow.rs
tpnote/src/viewer/: error.rs  http_response.rs  init.rs  mod.rs  sse_server.rs  watcher.rs  web_browser.rs
wix/: flake.nix  main.wxs  tp-note.wxs  tpnote.wxs
wix-env/: Dockerfile  open-dev-shell  rebuild-dev-image  run-script
wix-env/transfer/: make-aliases.sh
