# [PROJECT_DIR]/Cargo.toml
[workspace]
members = ["tp-note", "tpnote-lib"]
default-members = ["tp-note"]

[workspace.package]
authors = ["Jens Getreu <getreu@web.de>"]
categories = ["command-line-utilities", "template-engine", "text-processing"]
description = "Minimalistic note taking: save and edit your clipboard content as a note file"
documentation = "https://blog.getreu.net/projects/tp-note/tpnote--manual.html"
edition = "2021"
homepage = "https://blog.getreu.net/projects/tp-note/"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://gitlab.com/getreu/tp-note"
rust-version = "1.70.0"
version = "1.21.9"

[profile.release]
strip = "symbols"

[workspace.dependencies]
lazy_static = "1.4.0"
log = { version = "0.4.20", features = ["serde"] }
parking_lot = "0.12.1"
sanitize-filename-reader-friendly = "2.2.1"
serde = { version = "1.0.183", features = ["derive"] }
serde_yaml = "0.9.25"
tera = { version = "1.19.0", default-features = true }
thiserror = "1.0.44"
toml = "0.7.6"
