# [PROJECT_DIR]/Cargo.toml
[workspace]
resolver = "2"
members = ["tpnote", "tpnote-lib"]
default-members = ["tpnote"]

[workspace.package]
authors = ["Jens Getreu <getreu@web.de>"]
categories = ["command-line-utilities", "template-engine", "text-processing"]
description = "Minimalistic note-taking: save and edit your clipboard content as a note file"
documentation = "https://blog.getreu.net/projects/tp-note/tpnote--manual.html"
edition = "2021"
homepage = "https://blog.getreu.net/projects/tp-note/"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://gitlab.com/getreu/tp-note"
rust-version = "1.80.1"
version = "1.24.11"

[profile.release]
strip = "symbols"

[workspace.dependencies]
log = { version = "0.4.22", features = ["serde"] }
parking_lot = "0.12.3"
sanitize-filename-reader-friendly = "2.2.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_yaml = "0.9.34"
tera = { version = "1.20.0", default-features = true }
thiserror = "2.0.9"
toml = "0.8.19"
