[package]
name = "tp-note"
authors.workspace = true
categories.workspace = true
description = "This crate has moved to `tpnote`"
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version = "1.21.16"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
