[package]
name = "tpnote-html2md"
version = "0.3.3"
edition = "2024"
authors = ["Oleg `Kanedias` Chernovskiy <kanedias@house-of-maker.online>",
           "Jens Getreu <getreu@web.de>"]

description = "HTML to Markdown converter library"
repository = "https://gitlab.com/getreu/tp-note"
readme = "README.md"
keywords = ["html", "markdown", "converter"]
categories = ["development-tools", "parsing", "parser-implementations"]
license = "MIT"
rust-version.workspace = true


[lib]
name = "html2md"
#target_env="musl"crate-type = ["rlib", "dylib", "staticlib"]

[dependencies]
html5ever = "0.35.0"
regex = "1.12.2"
markup5ever = "0.35.0"
percent-encoding = "2.3.2"
tendril = "0.4"

[dev-dependencies]
indoc = "2.0.6"

# [profile.release]
# debug = false
# lto = true
# panic = 'abort'

# To use this project on Android we need JNI
[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.21.1", default-features = false }
