[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "tpnote-lib"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.36.3"

[features]
default = ["renderer", "viewer", "lang-detection"]
lang-detection = ["dep:lingua"]
renderer = ["dep:pulldown-cmark", "dep:rst_parser", "dep:rst_renderer", "dep:latex2mathml", "dep:syntect", "dep:fast_html2md"]
viewer = []

[dependencies]
fast_html2md = { version = "0.0.21", optional = true }
html-escape = "0.2.13"
latex2mathml = { version = "0.2.3", optional = true }
lingua = { version = "1.6.2", optional = true }
log.workspace = true
parking_lot.workspace = true
# Plain text renderer.
parse-hyperlinks = "0.27.2"
parse-hyperlinks-extras = "0.27.2"
#parse-hyperlinks-extras = { path = "../../parse-hyperlinks/parse-hyperlinks-extras" }
#parse-hyperlinks = { path = "../../parse-hyperlinks/parse-hyperlinks" }
percent-encoding = "2.3.1"
# Markdown renderer.
pulldown-cmark = { version = "0.12", default-features = false, features = ["simd", "html"], optional = true }
# ReStructuredText renderer.
rst_parser = { version = "0.4.1", optional = true }
# ReStructuredText renderer.
rst_renderer = { version = "0.4.1", optional = true }
sanitize-filename-reader-friendly.workspace = true
self_cell = "1.1.0"
serde_json = "1.0.133"
serde.workspace = true
serde_yaml.workspace = true
substring = "1.4.5"
syntect = { version = "5.2.0", optional = true }
tera.workspace = true
thiserror.workspace = true
toml.workspace = true


[target.'cfg(windows)'.dependencies]
win32job = "2.0.0"
windows-sys = { version = "0.59.0", features = [
         #"Win32_Foundation",
         #"Win32_Security",
         #"Win32_System_Threading",
         #"Win32_UI_WindowsAndMessaging",
         "Win32_Globalization",
         "Win32_System_SystemServices",
] }
