[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation = "https://docs.rs/tpnote-lib/latest/tpnote_lib/"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "tpnote-lib"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.45.7"

[features]
default = ["renderer", "viewer", "lang-detection"]
lang-detection = ["dep:lingua"]
renderer = ["dep:pulldown-cmark", "dep:rst_parser", "dep:rst_renderer", "dep:latex2mathml", "dep:syntect", "dep:tpnote-html2md"]
viewer = []

[dependencies]
html-escape = "0.2.13"
itertools = "0.14.0"
latex2mathml = { version = "0.2.3", optional = true }
lingua = { version = "1.8.0", optional = true, default-features = false, features = [ "english", "chinese", "hindi", "spanish", "french", "bengali", "portuguese", "russian", "german", "japanese", "polish", "italian", "dutch",  "greek", "czech", "hungarian", "serbian", "bulgarian", "croatian", "slovak", "slovene", "bosnian", "irish", "icelandic", "finnish", "estonian", "latvian", "lithuanian", "bokmal", "nynorsk", "swedish"] }
### Other supported languages in v1.8.0 ordered by number of speakers:
# "english", "chinese", "hindi", "spanish", "french", "arabic", "bengali",
# "portuguese", "russian", "urdu", "indonesian", "german", "japanese",
# "punjabi", "marathi", "telugu", "tamil", "korean", "vietnamese", "turkish",
# "gujarati", "persian", "polish", "italian", "ukrainian", "dutch", "malay",
# "thai", "romanian", "swahili", "greek", "czech", "hungarian", "serbian",
# "bulgarian", "croatian", "slovak", "slovene", "bosnian", "macedonian",
# "albanian", "belarusian", "kazakh", "azerbaijani", "armenian", "georgian",
# "hebrew", "irish", "icelandic", "finnish", "estonian", "latvian",
# "lithuanian", "catalan", "basque", "afrikaans", "bokmal", "nynorsk",
# "maori", "mongolian", "ganda", "tagalog", "shona", "somali", "sotho",
# "tswana", "tsonga", "esperanto", "latin", "swedish", "xhosa", "yoruba",
# "zulu"
log.workspace = true
parking_lot.workspace = true
parse-hyperlinks = "0.29.2" # Plain text renderer.
parse-hyperlinks-extras = "=0.29.2" # Plain text renderer.
#parse-hyperlinks-extras = { path = "../../parse-hyperlinks/parse-hyperlinks-extras" }
#parse-hyperlinks = { path = "../../parse-hyperlinks/parse-hyperlinks" }
percent-encoding = "2.3.2"
pulldown-cmark = { version = "0.13", default-features = false, features = ["simd", "html"], optional = true } # Markdown renderer.
rst_parser = { version = "0.4.2", optional = true } # ReStructuredText renderer.
rst_renderer = { version = "0.4.2", optional = true } # ReStructuredText renderer.
sanitize-filename-reader-friendly.workspace = true
self_cell = "1.2.2"
serde_json = "1.0.149"
serde.workspace = true
serde_yaml.workspace = true
substring = "1.4.5"
syntect = { version = "5.3.0", optional = true }
tera.workspace = true
thiserror.workspace = true
toml.workspace = true
#tpnote-html2md = { path = "../tpnote-html2md", optional = true }
tpnote-html2md = { version = "0.3.5", optional = true }

[target.'cfg(windows)'.dependencies]
win32job = "2.0.3"
windows-sys = { version = "0.61.2", features = [
         #"Win32_Foundation",
         #"Win32_Security",
         #"Win32_System_Threading",
         #"Win32_UI_WindowsAndMessaging",
         "Win32_Globalization",
         "Win32_System_SystemServices",
] }
