[package]
name = "tpnote-lib"
version = "0.7.0"
authors = ["Jens Getreu <getreu@web.de>"]
edition = "2021"
readme = "README.md"
description = "Library for minimalistic note taking: save and edit your clipboard content as a note file"
license = "MIT/Apache-2.0"
categories = ["command-line-utilities", "template-engine", "text-processing"]
documentation = "https://blog.getreu.net/projects/tp-note/tpnote--manual.html"
homepage = "https://blog.getreu.net/projects/tp-note/"
repository = "https://gitlab.com/getreu/tp-note"

[features]
default = ["renderer", "viewer"]
viewer = []
renderer = ["pulldown-cmark", "cmark-syntax", "latex2mathml", "rst_parser", "rst_renderer"]

[dependencies]
cmark-syntax = { version = "0.3.1", features = ["latex2mathml"], optional = true }
lazy_static = "1.4.0"
latex2mathml = { version = "0.2.3", optional = true }
log = { version = "0.4.17", features = ["serde"] }
parse-hyperlinks = "0.23.4"
# parse-hyperlinks = { path = "../parse-hyperlinks/parse-hyperlinks" }
pulldown-cmark = { version = "0.9.2", default-features = false, features = ["simd"], optional = true }
rst_parser = { version = "0.4.0", optional = true }
rst_renderer = { version = "0.4.0", optional = true }
sanitize-filename-reader-friendly = "2.2.1"
self_cell = "0.10.2"
serde = { version = "1.0.143", features = ["derive"] }
serde_yaml = "0.9.9"
serde_json = "*"
substring = "1.4.5"
tera = { version = "1.17.0", default-features = true }
thiserror = "1.0.32"
toml = "0.5.9"


