[package]
name = "tpnote-lib"
version = "0.12.0"
authors = ["Jens Getreu <getreu@web.de>"]
edition = "2021"
readme = "README.md"
description = "Library for minimalistic note taking: save and edit your clipboard content as a note file"
license = "MIT/Apache-2.0"
categories = ["command-line-utilities", "template-engine", "text-processing"]
documentation = "https://blog.getreu.net/projects/tp-note/tpnote--manual.html"
homepage = "https://blog.getreu.net/projects/tp-note/"
repository = "https://gitlab.com/getreu/tp-note"

[features]
default = ["renderer", "viewer"]
viewer = ["percent-encoding"]
renderer = ["pulldown-cmark", "cmark-syntax", "rst_parser", "rst_renderer"]

[dependencies]
cmark-syntax = { version = "0.3.1", features = ["latex2mathml"], optional = true }
lazy_static = "1.4.0"
log = { version = "0.4.17", features = ["serde"] }
parse-hyperlinks = "0.23.4"
# parse-hyperlinks = { path = "../parse-hyperlinks/parse-hyperlinks" }
parse-hyperlinks-extras = "0.23.4"
percent-encoding = { version = "2.2.0", optional = true }
pulldown-cmark = { version = "0.9.2", default-features = false, features = ["simd"], optional = true }
rst_parser = { version = "0.4.0", optional = true }
rst_renderer = { version = "0.4.0", optional = true }
sanitize-filename-reader-friendly = "2.2.1"
self_cell = "0.10.2"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
serde_yaml = "0.9.14"
substring = "1.4.5"
tera = { version = "1.17.1", default-features = true }
thiserror = "1.0.37"
toml = "0.5.9"


[target.'cfg(windows)'.dependencies]
win32job = "1.0.2"

[dependencies.windows-sys]
version = "0.42.0"
features = [
    #"Win32_Foundation",
    #"Win32_Security",
    #"Win32_System_Threading",
    #"Win32_UI_WindowsAndMessaging",
    "Win32_Globalization",
    "Win32_System_SystemServices",
]
